<resources>
    <string name="app_name">ContactsApp</string>
    <string name="contact_list_title">Список контактов</string>
    <string name="contact_details_title">Детали контакта</string>
    <string name="avatar">avatar</string>
    <string name="name">name</string>
    <string name="phone_number">phone_number</string>
    <string name="phone_number_2">phone_number2</string>
    <string name="email">email</string>
    <string name="email2">email2</string>
    <string name="description">description</string>
</resources>